# progranome

./: Cargo.toml  DOCUMENTATION.md  README.md  build.rs
src/: app.rs  app_config.toml  app_state.rs  lib.rs  main.rs  metronome_unit.rs  timer_unit.rs
src/ui/: control.slint  controlPanel.slint  control_panel.slint  logic.slint  main.slint  metronomePanel.slint  metronome_unit.slint  palette.slint  unit_panel.slint
